made WoodHarvester static