@@ -13,7 +13,6 @@ import net.minecraft.world.phys.AABB;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  *
@@ -23,46 +22,32 @@ import java.util.stream.Collectors;
 
 public class WoodHarvester {
 	
-	private final Level level;
-	private final BlockPos startPos;
-	private final BlockState state;
-	private final int harvesting;
-	private final Player player;
-	
-	public WoodHarvester(Level level, BlockPos startPos, BlockState state, int harvesting, Player player) {
-		this.level = level;
-		this.startPos = startPos;
-		this.state = state;
-		this.harvesting = harvesting;
-		this.player = player;
-	}
-	
-	public void harvest() {
-		List<BlockPos> positions = BlockPos.betweenClosedStream(this.startPos.north().east(), this.startPos.south().west()).map(this::immutable).filter(this::isTreePosition).collect(Collectors.toList());
-		int height = this.getTreeHeight(positions);
+	public static void harvest(@NotNull Level level, @NotNull BlockPos startPos, @NotNull Block block, int harvesting, @NotNull Player player) {
+		List<BlockPos> positions = BlockPos.betweenClosedStream(startPos.north().east(), startPos.south().west()).map(WoodHarvester::immutable).filter(pos -> isTreePosition(level, pos, block)).toList();
+		int height = getTreeHeight(level, positions, block, harvesting);
 		if (height != 0) {
-			AABB aabb = this.getHarvestingArea(positions, height);
-			List<BlockPos> harvestingPositions = BlockPos.betweenClosedStream(aabb).map(this::immutable).filter(this::isTreePosition).toList();
+			AABB aabb = getHarvestingArea(startPos, positions, height);
+			List<BlockPos> harvestingPositions = BlockPos.betweenClosedStream(aabb).map(WoodHarvester::immutable).filter(pos -> isTreePosition(level, pos, block)).toList();
 			for (BlockPos pos : harvestingPositions) {
-				BlockState state = this.level.getBlockState(pos);
-				this.level.destroyBlock(pos, false);
-				Block.dropResources(state, this.level, pos, state.hasBlockEntity() ? this.level.getBlockEntity(pos) : null, this.player, this.getUsedStack());
+				BlockState state = level.getBlockState(pos);
+				level.destroyBlock(pos, false);
+				Block.dropResources(state, level, pos, state.hasBlockEntity() ? level.getBlockEntity(pos) : null, player, getUsedStack(player));
 			}
 		}
 	}
 	
-	private int getTreeHeight(@NotNull List<BlockPos> positions) {
+	private static int getTreeHeight(@NotNull Level level, @NotNull List<BlockPos> positions, @NotNull Block block, int harvesting) {
 		int height = 0;
 		for (BlockPos pos : positions) {
-			height = Math.max(this.getTreePositionHeight(pos), height);
+			height = Math.max(getTreePositionHeight(level, pos, block), height);
 		}
-		return Math.min(this.harvesting * 4 + (this.harvesting / 2), height);
+		return Math.min(harvesting * 4 + (harvesting / 2), height);
 	}
 	
-	private int getTreePositionHeight(@NotNull BlockPos pos) {
+	private static int getTreePositionHeight(@NotNull Level level, @NotNull BlockPos pos, @NotNull Block block) {
 		int height = 0;
 		for (int y = 0; y <= 256; y++) {
-			if (this.isTreePosition(pos.above(y))) {
+			if (isTreePosition(level, pos.above(y), block)) {
 				++height;
 			} else {
 				break;
@@ -71,22 +56,22 @@ public class WoodHarvester {
 		return height;
 	}
 	
-	private @NotNull AABB getHarvestingArea(@NotNull List<BlockPos> positions, int height) {
+	private static @NotNull AABB getHarvestingArea(@NotNull BlockPos startPos, @NotNull List<BlockPos> positions, int height) {
 		AABB aabb;
 		if (positions.size() == 1) {
-			aabb = new AABB(this.startPos.north().east(), this.startPos.south().west());
+			aabb = new AABB(startPos.north().east(), startPos.south().west());
 		} else if (positions.size() == 4) {
-			aabb = new AABB(this.startPos.north(1).east(1), this.startPos.south(1).west(1));
+			aabb = new AABB(startPos.north(1).east(1), startPos.south(1).west(1));
 		} else {
-			aabb = new AABB(this.startPos.north(2).east(2), this.startPos.south(2).west(2));
+			aabb = new AABB(startPos.north(2).east(2), startPos.south(2).west(2));
 		}
-		int y = this.startPos.getY();
+		int y = startPos.getY();
 		return aabb.setMinY(y - (height / 2.0)).setMaxY(y + height);
 	}
 	
-	private @NotNull ItemStack getUsedStack() {
-		ItemStack mainStack = this.player.getMainHandItem();
-		ItemStack offStack = this.player.getOffhandItem();
+	private static @NotNull ItemStack getUsedStack(@NotNull Player player) {
+		ItemStack mainStack = player.getMainHandItem();
+		ItemStack offStack = player.getOffhandItem();
 		if (mainStack.getEnchantmentLevel(XSEnchantments.HARVESTING.get()) > 0) {
 			return mainStack;
 		} else if (offStack.getEnchantmentLevel(XSEnchantments.HARVESTING.get()) > 0) {
@@ -99,12 +84,12 @@ public class WoodHarvester {
 		return ItemStack.EMPTY;
 	}
 	
-	private boolean isTreePosition(@NotNull BlockPos pos) {
-		BlockState state = this.level.getBlockState(pos);
-		return state.is(BlockTags.LOGS) || state.is(this.state.getBlock());
+	private static boolean isTreePosition(@NotNull Level level, @NotNull BlockPos pos, @NotNull Block block) {
+		BlockState state = level.getBlockState(pos);
+		return state.is(BlockTags.LOGS) || state.is(block);
 	}
 	
-	private @NotNull BlockPos immutable(@NotNull BlockPos pos) {
+	private static @NotNull BlockPos immutable(@NotNull BlockPos pos) {
 		if (pos instanceof MutableBlockPos mutablePos) {
 			return mutablePos.immutable();
 		}
